# daikin_d3net

./: README.md  build_executable.sh  capture_19200E1.txt  capture_19200N1.txt  capture_9600E1.txt  capture_9600N1.txt  capture_capture.ps1  com_filter_view.py  com_raw_live.py  d3net_rtu_gui.py  d3net_rtu_tool.py  keypad.txt  keypad2.txt  keypad_capture_button1.py  keypad_capture_sequence.py  keypad_live_counter.py  keypad_live_label.py  rnet_decode.py  rnet_log.txt  rnet_logger.py  roehn_discover.py  roehn_wizard_protocol_map.md  scan.ps1
custom_components/roehn_wizard/: __init__.py  config_flow.py  const.py  coordinator.py  cover.py  light.py  manifest.json  protocol.py  sensor.py  strings.json  switch.py
firmware/esp32_d3net/: CMakeLists.txt  README.md  partitions_ota.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
firmware/esp32_d3net/main/: CMakeLists.txt  app_context.h  config_store.c  config_store.h  d3net_codec.c  d3net_codec.h  d3net_gateway.c  d3net_gateway.h  main.c  modbus_rtu.c  modbus_rtu.h  telnet_server.c  telnet_server.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
logs/: btn1_live_1772212912.txt  btn1_live_1772213007.txt  btn1_live_1772213124.txt  btn1_live_1772213950.txt  btn1_live_1772214799.txt  button1_capture_1772212498.txt  button1_capture_1772212814.txt  button1_capture_1772214297.txt  button1_capture_1772214506.txt  keypad_capture_1772211727.txt  raw_dump_1772217434.txt
